--- a/bakhroush_custom_report/report/delivery_dotmatrix_report.xml
+++ b/bakhroush_custom_report/report/delivery_dotmatrix_report.xml
@@ -29,106 +29,100 @@
                     <table style="font-family:Calibri;font-size: 13px;border-collapse: collapse;">
                         <tr style="height:10mm;">
 <!--                            Invoice No.-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:47mm;text-align:center;"><span t-field="o.invoice_no"/></td>
-                            <td style="width:35mm;text-align:right;"></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
+                            <td style="width:53mm;text-align:center;border:1px solid black;"><span t-field="o.invoice_no"/></td>
+                            <td style="width:40mm;text-align:right;border:1px solid black;"/>
 
-                            <td style="width:43mm;text-align:center;font-size: 15px;font-weight:bold"></td>
-<!--                            Date-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:54mm;text-align:center;"><span t-field="o.scheduled_date"/></td>
-                            <td style="width:30mm;text-align:right;"></td>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+<!--                            S.no-->
+                            <td style="width:60mm;text-align:center;border:1px solid black;"><span t-field="o.scheduled_date"/></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
                         </tr>
                         <tr style="height:10mm;">
-<!--                            Customer No.-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:47mm;text-align:center;"><span t-field="o.customer_no"/></td>
-                            <td style="width:35mm;text-align:right;"></td>
+<!--                            Bulding No.-->
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
+                            <td style="width:53mm;text-align:center;border:1px solid black;"><span t-field="o.customer_no"/></td>
+                            <td style="width:40mm;text-align:right;border:1px solid black;"/>
 
-                            <td style="width:43mm;text-align:center;font-size: 15px;font-weight:bold"></td>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
 <!--                            Corresponding-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:54mm;text-align:center;"><span t-field="o.corresponding"/></td>
-                            <td style="width:30mm;text-align:right;"></td>
+                            <td style="width:60mm;text-align:center;border:1px solid black;"><span t-field="o.corresponding"/></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
                         </tr>
                         <tr style="height:10mm;">
 <!--                            Mobile No.-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:47mm;text-align:center;"><span t-field="o.mobile_no"/></td>
-                            <td style="width:35mm;text-align:right;"></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
+                            <td style="width:53mm;text-align:center;border:1px solid black;"><span t-field="o.mobile_no"/></td>
+                            <td style="width:40mm;text-align:right;border:1px solid black;"/>
 
-                            <td style="width:43mm;text-align:center;font-size: 20px;font-weight:bold"/>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
 <!--                            Delivery No.-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:54mm;text-align:center;"><span t-field="o.name"/></td>
-                            <td style="width:30mm;text-align:right;"></td>
+                            <td style="width:60mm;text-align:center;border:1px solid black;"><span t-field="o.name"/></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
                         </tr>
 
                         <tr style="height:10mm;">
-<!--                            Location-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:47mm;text-align:center;"><span t-field="o.location"/></td>
-                            <td style="width:35mm;text-align:right;"></td>
+<!--                            Mixing Time-->
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
+                            <td style="width:53mm;text-align:center;border:1px solid black;"><span t-field="o.location"/></td>
+                            <td style="width:40mm;text-align:right;border:1px solid black;"/>
 <!--                            Cust. Name-->
-                            <td style="width:30mm;text-align:right;"></td>
-                            <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.partner_id.name"/></td>
-                            <td style="width:30mm;text-align:right;"></td>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+                            <td colspan="2" style="width:67mm;text-align:center;border:1px solid black;"><span t-field="o.partner_id.name"/></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
                         </tr>
 
                         <tr style="height:10mm;">
 <!--                            Time Out-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:47mm;text-align:center;"><span t-field="o.time_out"/></td>
-                            <td style="width:35mm;text-align:right;"></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
+                            <td style="width:53mm;text-align:center;border:1px solid black;"><span t-field="o.time_out"/></td>
+                            <td style="width:40mm;text-align:right;"/>
 <!--                            Car No.-->
-                            <td style="width:30mm;text-align:right;"></td>
-                            <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.car_no.license_plate"/></td>
-                            <td style="width:30mm;text-align:right;"></td>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+                            <td colspan="2" style="width:67mm;text-align:center;border:1px solid black;"><span t-field="o.car_no.license_plate"/></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
                         </tr>
 
                         <tr style="height:10mm;">
 <!--                            Received Time-->
-                            <td style="width:30mm;text-align:left;"></td>
-                            <td style="width:47mm;text-align:center;"><span t-field="o.received_time"/></td>
-                            <td style="width:35mm;text-align:right;"></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
+                            <td style="width:53mm;text-align:center;border:1px solid black;"><span t-field="o.received_time"/></td>
+                            <td style="width:40mm;text-align:right;border:1px solid black;"/>
 <!--                            Driver Name-->
-                            <td style="width:30m;text-align:right;"></td>
-                            <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.driver_name"/></td>
-                            <td style="width:30mm;text-align:right;"></td>
+                            <td style="width:40mm;text-align:center;font-size: 15px;font-weight:bold;"/>
+                            <td colspan="2" style="width:67mm;text-align:center;border:1px solid black;"><span t-field="o.driver_name"/></td>
+                            <td style="width:30mm;text-align:right;border:1px solid black;"/>
                         </tr>
                     </table>
 
                     <table style="font-family:Calibri;font-size: 13px;border-collapse: collapse;">
-                        <tr style="height:10mm;">
-                            <td style="width:21mm;text-align:center;"></td>
-                            <td style="width:44mm;text-align:center;"></td>
-                            <td style="width:151mm;text-align:center;"></td>
-                            <td style="width:50mm;text-align:center;"></td>
+                        <tr>
+                            <td style="width:23mm;text-align:center;border:1px solid black;"><br/><br/></td>
+                            <td style="width:57mm;text-align:center;border:1px solid black;"><br/><br/></td>
+                            <td style="width:129mm;text-align:center;border:1px solid black;"><br/><br/></td>
+                            <td style="width:69mm;text-align:center;border:1px solid black;"><br/><br/></td>
                         </tr>
-                        <tr style="height:10mm;">
-                            <td style="width:12mm;text-align:center;"></td>
-                            <td style="width:44mm;text-align:center;"></td>
-                            <td style="width:151mm;text-align:center;"></td>
-                            <td style="width:50mm;text-align:center;"></td>
-                        </tr>
+
                         <tbody>
-                            <t t-set="i" t-value="1"/>
                             <t t-set="lines" t-value="o.move_line_ids_without_package"/>
-                            <tr t-foreach="lines" t-as="move" style="height:10mm;">
-                                <td class="text-center">
-                                    <span t-esc="i"/>
-                                </td>
-                                <td class="text-center">
-                                    <span t-field="move.barcode"/>
-                                </td>
-                                <td class="text-center">
-                                    <span t-field="move.qty_done"/>
-                                </td>
-                                <td class="text-center">
-                                    <span t-field="move.product_uom_qty"/>
-                                </td>
-                                 <t t-set="i" t-value="i+1"/>
-                             </tr>
+                                <tr t-foreach="lines" t-as="move" style="height:10mm;">
+
+                                    <td class="text-center" style="border:1px solid black;">
+                                        <span t-field="move.wc"/>
+                                    </td>
+                                    <td class="text-center" style="border:1px solid black;">
+                                        <span t-field="move.barcode"/>
+                                    </td>
+                                    <td class="text-center" style="border:1px solid black;">
+                                        <span t-field="move.product_id.name"/>
+                                    </td>
+                                    <td class="text-center" style="border:1px solid black;">
+                                        <span t-field="move.qty_done"/>
+                                    </td>
+                                </tr>
                         </tbody>
                     </table>
                 </div>
