--- a/ahcec_assets_xlsx_print/wizard/report_menu.xml
+++ b/ahcec_assets_xlsx_print/wizard/report_menu.xml
@@ -36,7 +36,7 @@
             <field name="target">new</field>
         </record>
 
-        <menuitem name="Asset Excel report"  parent="account_reports.account_reports_audit_reports_menu" id="export_asset_excel" action="wizard_act_asset"/>
+        <menuitem name="Asset Excel Report"  parent="account_reports.account_reports_audit_reports_menu" id="export_asset_excel" action="wizard_act_asset"/>
     </data>
 </odoo>
 
