--- a/ahcec_assets_xlsx_print/wizard/report_menu.xml
+++ b/ahcec_assets_xlsx_print/wizard/report_menu.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <record model="ir.ui.view" id="view_account_asset_percentage_form">
+        <field name="name">account.asset.percentage.form</field>
+        <field name="model">account.asset</field>
+        <field name="inherit_id" ref="account_asset.view_account_asset_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='salvage_value']" position="after">
+                    <field name="percentage"
+                           attrs="{'invisible': [('state', '=', 'model')], 'readonly': ['|', ('state','!=','draft'), ('original_move_line_ids', '!=', [])], 'readonly': [('state', '!=', 'draft')]}"/>
+                </xpath>
+            </field>
+        </record>
+
+
         <record id="wizard_assect_form" model="ir.ui.view">
             <field name="name">wizard.asset.asset.history</field>
             <field name="model">wizard.asset.asset.history</field>
